[package]
name = "robojail"
version = "0.1.0"
edition = "2021"
authors = ["RoboJail Contributors"]
description = "Arch Linux sandboxed environments for AI coding assistants"
license = "MIT"
repository = "https://github.com/robojail/robojail"
keywords = ["sandbox", "jail", "container", "ai", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# System
nix = { version = "0.29", features = ["mount", "sched", "signal", "user", "process", "fs", "hostname"] }
libc = "0.2"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
directories = "5"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
